# eticGeneral

./: .gitignore  LICENSE  README.md  terms.signature.md
Database/: README.md  concepts.md  entity_relation_diagram.md  memory.md
Database/lab/: Makefile  README.md  pyproject.toml
Database/lab/migrations/: env.py
Database/lab/src/models/: base.py
Database/projects/project-a/: README.md  docker-compose.yaml  pyproject.toml
Database/projects/project-a/ops/: poetry.Dockerfile
Database/projects/project-a/src/: main.py
Database/projects/project-b/django-app/: pyproject.toml
Database/projects/project-b/django-app/comments/: urls.py  views.py
Database/projects/project-b/django-app/mongo/: models.py  mongo.py
Database/projects/project-b/django-app/sample/: models.py  views.py
Database/projects/project-b/django-app/setup/: asgi.py  settings.py  urls.py  wsgi.py
Docker/: Dockerfile  README.md
Docker/project/: Makefile  README.md  docker-compose.yaml
Docker/project/api/: README.md  pyproject.toml
Docker/project/api/src/: main.py  router.py
HTML, CSS and JavaScript/javascript/: README.md  operators.md
Linux/: README.md  chain.commands.md  chain.samples.md  commands.md  redirect.commands.md
Linux/samples/: Makefile  README.md  dir_spammer.sh  entrypoint.sh  handle_spammer.sh  (+2 more)
Samples and Concepts/: README.md  solid.md  terms.md
Samples and Concepts/Database/projects/project-b/django-app/: pyproject.toml
Samples and Concepts/Database/projects/project-b/django-app/sample/: urls.py
Samples and Concepts/Database/projects/project-c/: pyproject.toml
Samples and Concepts/Database/projects/project-c/api/: models.py  serializers.py  views.py
Samples and Concepts/Database/projects/project-c/setup/: settings.py  urls.py
Self-Guided Learning/: README.md
Self-Guided Learning/docker/day_02/examples/simple_project/app/: Dockerfile  pyproject.toml
Self-Guided Learning/docker/day_02/examples/simple_project/app/src/: app.py  config.py  db.py
Self-Guided Learning/python/day_01/lab_02/: README.md  main.py  pyproject.toml
Self-Guided Learning/python/day_03/examples/docker/: Dockerfile  Makefile  README.md  pyproject.toml
Self-Guided Learning/python/day_03/examples/docker/src/: main.py
Self-Guided Learning/python/day_03/examples/simple_api/: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
Self-Guided Learning/python/day_03/examples/simple_api/src/: fastapi_app.py  fastapi_middlewares.py  flask_app.py
Self-Guided Learning/python/day_03/examples/simple_cli/: Dockerfile  Makefile  README.md  pyproject.toml
Self-Guided Learning/python/day_03/examples/simple_cli/src/: commands.py
Self-Guided Learning/python/day_03/examples/simple_django/: Dockerfile  Makefile  README.md  manage.py  pyproject.toml
Self-Guided Learning/python/day_03/examples/simple_django/app/: apps.py  urls.py  views.py
Self-Guided Learning/python/day_03/examples/simple_django/app/templates/: index.html
Self-Guided Learning/python/day_03/examples/simple_django/setup/: asgi.py  settings.py  urls.py  wsgi.py
Self-Guided Learning/python/day_05/examples/simple_models/: README.md  main.py  models.py  pyproject.toml  settings.py
Self-Guided Learning/python/day_07/examples/simple_drf/: Makefile  manage.py  pyproject.toml
Self-Guided Learning/python/day_07/examples/simple_drf/api_app/: middleware.py  models.py  serializers.py  urls.py  views.py
Self-Guided Learning/python/day_07/examples/simple_drf/api_app/migrations/: 0001_initial.py
Self-Guided Learning/python/day_07/examples/simple_drf/api_project/: asgi.py  settings.py  urls.py  wsgi.py
Self-Guided Learning/python/day_08/examples/simple_django/: Makefile  README.md  pyproject.toml
Self-Guided Learning/python/day_08/examples/simple_django/blog/: admin.py  forms.py  models.py  urls.py  views.py
Self-Guided Learning/python/day_08/examples/simple_django/blog/migrations/: 0001_initial.py
Self-Guided Learning/python/day_08/examples/simple_django/blog/static/blog/: style.css
Self-Guided Learning/python/day_08/examples/simple_django/blog/templates/blog/: base.html  new_post.html  post_detail.html  post_list.html
Self-Guided Learning/python/day_08/examples/simple_django/setup/: asgi.py  settings.py  wsgi.py
Self-Guided Learning/python/day_10/examples/request_s/: README.md  main.py  pyproject.toml
Self-Guided Learning/python/day_10/examples/simple_pandas/: Makefile  README.md  pyproject.toml
Self-Guided Learning/python/day_10/examples/simple_pandas/inputs/: employees.csv
Self-Guided Learning/python/day_10/examples/simple_pandas/src/: sample.py  transform.py
Self-Guided Learning/python/day_10/examples/simple_pandas/src/notebooks/: pandas.ipynb
Self-Guided Learning/python/day_10/examples/simple_pandas/src/notebooks/.ipynb_checkpoints/: pandas-checkpoint.ipynb  statistics-checkpoint.ipynb
Self-Guided Learning/python/day_10/examples/simple_pandas/src/notebooks/plotting/: graphs.ipynb  seaborn.ipynb
Self-Guided Learning/python/day_10/examples/simple_pandas/src/notebooks/plotting/.ipynb_checkpoints/: seaborn-checkpoint.ipynb
Self-Guided Learning/python/day_10/examples/simple_pandas/src/notebooks/statistics/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  README.md  statistics.ipynb
Self-Guided Learning/python/day_10/examples/simple_pandas/src/utils/: files.py
Self-Guided Learning/python/day_12/examples/calculator/: README.md  calculator.py  pyproject.toml
Self-Guided Learning/python/day_12/examples/simple_click/: Makefile  README.md  pyproject.toml
Self-Guided Learning/python/day_12/examples/simple_click/src/: __init__.py
Self-Guided Learning/python/day_12/examples/simple_click/src/cli/: __init__.py  addons.py  commands.py
Self-Guided Learning/python/day_12/examples/simple_click/src/services/: __init__.py  cons.py  log.py  main.py
Self-Guided Learning/python/day_12/examples/simple_click/tests/: __init__.py  conftest.py  test_sample.py
css/: README.md  selectors.md
html/: README.md  display.md  elements.md
javascript/: README.md  attributes.element.md  attributes.md  terms.md
(+302 files in other folders)
