[tool.poetry]
name = "api"
version = "0.1.0"
description = "Project's API"
authors = ["Bruno Lançoni <services@brunolanconi.com.br>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
