[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Bruno Lançoni <services@brunolanconi.com.br>"]
packages = [{include = "./setup"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.2.3"}
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
