[tool.poetry]
name = "api-project"
version = "0.1.0"
description = ""
authors = ["Bruno Lançoni Neto <bruno.lanconi.neto@devoteam.com>"]
packages = [{include = "./setup"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
