[tool.poetry]
name = "simple-pandas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "./src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
pandas = "^2.2.2"
scipy = "^1.14.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
debugpy = "^1.8.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
