[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
calculator = "calculator:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
